<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:title="@string/pref_landing_label"
        android:key="@string/pref_landing_key"
        android:defaultValue="@string/pref_landing_main"
        android:entryValues="@array/pref_landing_values"
        android:entries="@array/pref_landing_label_values" />

    <ListPreference
        android:title="@string/pref_widget_display_label"
        android:key="@string/pref_widget_display_key"
        android:defaultValue="@string/pref_widget_display_hot"
        android:entryValues="@array/pref_widget_display_values"
        android:entries="@array/pref_widget_display_label_values" />

    <ListPreference
        android:key="@string/pref_sync_frequency_key"
        android:title="@string/pref_title_sync_frequency"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:defaultValue="60"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>