<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reddit_post_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/preview_img"
        android:layout_width="@dimen/preview_img_width"
        android:layout_height="@dimen/preview_img_height"
        android:layout_gravity="center_vertical"
        android:layout_margin="4dp"
        android:src="@drawable/ic_placeholder_img"
        android:contentDescription="@string/description_img_preview"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reddit_top_bar"
            style="@style/SecondaryTextComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_topbar"/>

        <TextView
            android:id="@+id/reddit_title"
            style="@style/PrimaryTextComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|left"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:maxLines="2"
            android:contentDescription="@string/description_title_item"/>

        <TextView
            android:id="@+id/reddit_bottom_bar"
            style="@style/SecondaryTextComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_bottombar"/>
    </LinearLayout>

</LinearLayout>