<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:showIn="@layout/app_bar_main"
    tools:context="com.aggarwalankur.capstone.quickreddit.activities.MainActivity">

    <LinearLayout
        android:id="@+id/post_type_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">
        <TextView
            android:id="@+id/main_list_hot_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_hot"/>
        <TextView
            android:id="@+id/main_list_new_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_new"/>
        <TextView
            android:id="@+id/main_list_top_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_top"/>
    </LinearLayout>

    <!--Ad view here-->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/reddit_posts_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/post_type_selection"
        tools:listItem="@layout/reddit_post_list_item"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>



</RelativeLayout>
